[package]
name = "intel-mkl-src"
version = "0.5.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>", "Lance Hepler <lance.hepler@10xgenomics.com"]
edition = "2018"

description = "Redistribution of Intel(R) MKL as a crate"
repository = "https://github.com/rust-math/intel-mkl-src"
keywords = ["fft", "blas", "lapack"]
license-file = "License.txt"

build = "build.rs"
links = "mkl_core"

[build-dependencies]
md5 = "0.6"
curl = "*"
bzip2 = "0.3.3"
tar = "*"
